--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ body {
     font-style: oblique;
     word-spacing: 1px;
     text-decoration: rebeccapurple;
-    background: #282828;
-    color:#131010;
+    background: #f1f1f1;
+    color:#0f141e;
  
 }
 a {
-   color: gold;
+   color: black;
    text-decoration: none;
 
 
@@ -27,14 +27,14 @@ a.active {
 
 }
 a.visited {
-    color:  red;
+    color:  gray;
 
 
 }
 
 .container {
 
-max-width: 800px;
+max-width: 750px;
 margin: auto;
 padding-top: 30px;
 
@@ -45,25 +45,33 @@ padding-top: 30px;
     border-radius: 28px;
     box-shadow: 4px 4px 14px rgba(0, 0, 0, .25);
 
+    
 
 }
 
 
 .info {
     margin-bottom: 20px;
-  
+    
+    
    
+  
     
     
-
-
-
+  
 }
+
+
+
+
+
 
 @media (max-width:650px) {
     .info {
       display: block;
-      text-align: center;
+      text-align:center;  
+      
+      
 
     }
 
@@ -73,6 +81,9 @@ padding-top: 30px;
 
 .info-text {
    margin-left: 40px;
+   
+   
+  
 
 }
 
@@ -80,8 +91,9 @@ padding-top: 30px;
 .info-text p {
       font-style: italic;
       font-weight: bold;
-      color: #004fed;
+      color: white;
       margin: 0px;
+      
       
      
 
@@ -93,6 +105,7 @@ padding-top: 30px;
 .info-text h4 {
 
     margin-bottom: 10px;
+   
 
 
 
@@ -101,7 +114,7 @@ padding-top: 30px;
 .card1 {
     border: 1px solid purple;
     border-radius: 20px;
-    background-color: #412227;
+    background-color: cornflowerblue;
     margin-bottom: 10px;
     padding: 15px 20px;
     
@@ -110,7 +123,7 @@ padding-top: 30px;
 .card2 {
     border: 1px solid purple;
     border-radius: 20px;
-    background-color: #412227;
+    background-color: cornflowerblue;
     margin-bottom: 10px;
 
 }
@@ -118,26 +131,26 @@ padding-top: 30px;
 .card3 {
     border: 1px solid purple ;
     border-radius: 10px;
-    background-color: #412227;
+    background-color: cornflowerblue;
 
 
 }
+
 .card4 {
-   border: 3px solid black;
-
-
-
+color: black;
 
 }
+
    
 
 .btn {
-background: green;
+background: coral;
 padding: 15px 20px;
 color: #fff;
 border: none;
 font-family: inherit;
 cursor: pointer;
+border-radius: 10px;
 
 }
 
@@ -147,7 +160,7 @@ opacity: 0.8;
 }
 
 
-.form {
+.form h2{
  text-align:center;
 }
 
@@ -166,7 +179,7 @@ opacity: 0.8;
 .form-group label {
     display: block;
     font-size: 14px;
-    color: #86898f;
+    color: black;
 
 
 
@@ -178,8 +191,8 @@ opacity: 0.8;
      box-sizing: border-box ;
      border: none;
      background: transparent;
-     border-bottom: 1px solid #ccc;
-     color: #000;
+     border-bottom: 1px solid white;
+     color: black;
      padding: 15px 0 10px;
      outline: none;
      font-family: inherit;
@@ -191,16 +204,20 @@ opacity: 0.8;
 .form-row {
     margin-bottom: 10px ;
     display: flex;
+    
+    
 
 }
 
 .form-row .form-group {
     margin-right: 20px;
-    width: 50%
+    width: 50%;
+    
+    
    
 
  /*display: inline-block*/;
-   /* width: calc(50%-20px)*/;
+  /* width: calc(50%-20px)*/;
 
 }
 
